[gd_scene load_steps=6 format=3 uid="uid://uraotpquk3lo"]

[ext_resource type="Script" path="res://scripts/vehicle_requisites.gd" id="1_udcn8"]
[ext_resource type="Theme" uid="uid://bbkladv6d2xeb" path="res://ui_theme.tres" id="2_p8wca"]
[ext_resource type="PackedScene" uid="uid://dj5a8i4j2he8g" path="res://scenes/vehicle_camera.tscn" id="2_rhjk1"]
[ext_resource type="AudioStream" uid="uid://cwu45g082xjv8" path="res://assets/audio/vehicle/loop_0.wav" id="4_4uue4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jhaaw"]

[node name="VehicleRequisites" type="Node3D"]
script = ExtResource("1_udcn8")

[node name="BoostCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="VehicleCamera" parent="." instance=ExtResource("2_rhjk1")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -2.7486, 0, 4.13212)

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_4uue4")
autoplay = true
bus = &"Sound"
attenuation_filter_cutoff_hz = 20500.0

[node name="RotationChecker" type="Node3D" parent="."]

[node name="CameraHeightTrigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraHeightTrigger"]
shape = SubResource("BoxShape3D_jhaaw")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BoostMeter" type="ProgressBar" parent="UI"]
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.4
anchor_right = 0.05
anchor_bottom = 0.6
offset_top = 0.119965
offset_right = 0.400024
offset_bottom = -0.229004
grow_vertical = 0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Speedometer" type="ColorRect" parent="UI"]
custom_minimum_size = Vector2(140, 40)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("2_p8wca")
color = Color(0, 0, 0, 0.305882)

[node name="Label" type="Label" parent="UI/Speedometer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Speed: ???"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="CameraHeightTrigger" to="." method="_on_camera_height_trigger_area_entered"]
